# apewatch

./: Dockerfile  README.md  TODO.md  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml  update_stocks.sh
no_brakes/: __init__.py  comments.py  comments_elk.py  ml_anomaly_alerts.py  submissions.py  submissions_elk.py  subreddits.py  tickers.py  utils.py
no_brakes/data/: stocks.json
tests/: test_tickers.py
utils/: anomaly.json  ticker-anomoly.sh
