[tool.poetry]
name = "no_brakes"
version = "0.1.0"
description = "Stream Reddit submissions containing stock ticker symbols"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
praw = "^7.1.4"
requests = "^2.25.1"
elasticsearch-dsl = "^7.3.0"
yahooquery = "^2.2.15"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
